--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: 2.0.0
   http: 0.12.0+1
+  sqflite: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -25,6 +25,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.5.1
 
 
 # For information on the generic Dart part of this file, see the
