--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   test: ^1.5.1
+  shared_preferences: 0.5.1+1
 
 
 # For information on the generic Dart part of this file, see the
