add share url and show about snackbar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
     sdk: flutter
   http: 0.12.0+1
   sqflite: ^1.1.0
+  share: 0.6.0+1
+  url_launcher: 5.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
